--- a/package.json
+++ b/package.json
@@ -120,6 +120,14 @@
           "light": "./media/file-code_light.svg",
           "dark": "./media/file-code_dark.svg"
         }
+      },
+      {
+        "command": "dbtPowerUser.runSQL",
+        "title": "dbt Power User: Run SQL",
+        "icon": {
+          "light": "./media/file-code_light.svg",
+          "dark": "./media/file-code_dark.svg"
+        }
       }
     ],
     "menus": {
