--- a/package.json
+++ b/package.json
@@ -176,6 +176,8 @@
     "deploy": "vsce publish"
   },
   "devDependencies": {
+    "@types/easy-table": "^0.0.33",
+    "@types/flat": "^5.0.2",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.5",
     "@types/mocha": "^7.0.2",
@@ -200,7 +202,11 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@google-cloud/bigquery": "^5.9.0",
+    "csv-stringify": "^5.6.5",
     "dayjs": "^1.8.34",
+    "easy-table": "^1.1.1",
+    "flat": "^5.0.2",
     "inversify": "^5.0.5",
     "inversify-binding-decorators": "^4.0.0",
     "js-yaml": "^3.14.0",
