--- a/package.json
+++ b/package.json
@@ -39,6 +39,46 @@
             "type": "boolean",
             "default": false,
             "description": "Disable automatic listing of models when files change."
+          },
+          "dbt.bigquery.keyFilename": {
+            "type": "string",
+            "default": "",
+            "description": "Full path to the a .json, .pem, or .p12 key downloaded from the Google Developers Console. If you provide a path to a JSON file, the projectId option is not necessary. NOTE: .pem and .p12 require you to specify the email option as well."
+          },
+          "dbt.bigquery.projectId": {
+            "type": "string",
+            "default": "",
+            "description": "(Optional) The project ID from the Google Developer's Console, e.g. 'grape-spaceship-123'. This is NOT needed if you are provide a key in JSON format"
+          },
+          "dbt.bigquery.useLegacySql": {
+            "type": "boolean",
+            "default": false,
+            "description": "Specifies whether to use BigQuery's legacy SQL dialect for this query. The default value is false. If set to false, the query will use BigQuery's standard SQL: https://cloud.google.com/bigquery/sql-reference/"
+          },
+          "dbt.bigquery.location": {
+            "type": "string",
+            "default": "US",
+            "description": "The geographic location of the job. Required except for US and EU. See details at https://cloud.google.com/bigquery/docs/dataset-locations#specifying_your_location."
+          },
+          "dbt.bigquery.maximumBytesBilled": {
+            "type": "integer",
+            "default": 1000000000000,
+            "description": "Queries that will have bytes billed beyond this limit will fail (without incurring a charge). If unspecified, this will be set to your project default."
+          },
+          "dbt.bigquery.outputFormat": {
+            "type": "string",
+            "default": "json",
+            "enum": [
+              "json",
+              "csv",
+              "table"
+            ],
+            "description": "Controls the output format for query results."
+          },
+          "dbt.bigquery.prettyPrintJSON": {
+            "type": "boolean",
+            "default": true,
+            "description": "Pretty print JSON results."
           }
         }
       }
@@ -124,11 +164,29 @@
       },
       {
         "command": "dbtPowerUser.openQueryRunner",
-        "title": "dbt Power User: Open QueryRunner",
+        "title": "dbt Big Query Power User: Open QueryRunner",
+
         "icon": {
           "light": "./media/dashboard_light.svg",
           "dark": "./media/dashboard_dark.svg"
         }
+      },
+      {
+        "command": "dbtPowerUser.querySQLResult",
+        "title": "dbt Big Query Power User: Query SQL",
+        "icon": {
+          "light": "./media/source_light.svg",
+          "dark": "./media/source_dark.svg"
+        }
+      },
+      {
+        "command": "dbtPowerUser.querySQLDryRun",
+        "title": "dbt Big Query Power User: Dry Run SQL",
+        "icon": {
+          "light": "./media/source_light.svg",
+          "dark": "./media/source_dark.svg"
+        }
+
       }
     ],
     "menus": {
