--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
             "default": "",
             "description": "Full path to the a .json, .pem, or .p12 key downloaded from the Google Developers Console. If you provide a path to a JSON file, the projectId option is not necessary. NOTE: .pem and .p12 require you to specify the email option as well."
           },
+          "dbt.bigquery.itemsPerPage": {
+            "type": "number",
+            "default": 50,
+            "description": "Number of result rows per page"
+          },
+
           "dbt.bigquery.projectId": {
             "type": "string",
             "default": "",
