--- a/package.json
+++ b/package.json
@@ -259,7 +259,6 @@
         "@types/easy-table": "^0.0.33",
         "@types/flat": "^5.0.2",
         "@types/glob": "^7.1.1",
-        "@types/js-yaml": "^3.12.5",
         "@types/mocha": "^7.0.2",
         "@types/node": "^13.13.15",
         "@types/vscode": "^1.52.0",
@@ -289,8 +288,7 @@
         "flat": "^5.0.2",
         "inversify": "^5.0.5",
         "inversify-binding-decorators": "^4.0.0",
-        "js-yaml": "^3.14.0",
         "reflect-metadata": "^0.1.13",
-        "yaml": "^1.10.2"
+        "yaml": "^2.0.0-10"
     }
 }
