feat: Add run sql to list of icon menu items

--- a/package.json
+++ b/package.json
@@ -176,6 +176,14 @@
                 }
             },
             {
+                "command": "dbtPowerUser.runSQL",
+                "title": "dbt Power User: Run SQL",
+                "icon": {
+                    "light": "./media/file-code_light.svg",
+                    "dark": "./media/file-code_dark.svg"
+                }
+            },
+            {
                 "command": "dbtPowerUser.openQueryRunner",
                 "title": "dbt Big Query Power User: Open QueryRunner",
                 "icon": {
