--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
 
     },
     "devDependencies": {
+        "@types/csv-stringify": "^3.1.0",
         "@types/easy-table": "^0.0.33",
         "@types/flat": "^5.0.2",
         "@types/glob": "^7.1.1",
