--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "main": "./dist/extension",
     "contributes": {
         "configuration": [{
-            "title": "dbt Power User",
+            "title": "dbt Big Query Power User",
             "properties": {
                 "dbt.listModelsDisabled": {
                     "type": "boolean",
@@ -263,7 +263,6 @@
         "lint:fix": "eslint src --ext ts --fix",
         "deploy-vscode": "vsce publish",
         "deploy-openvsx": "ovsx publish"
-
     },
     "devDependencies": {
         "@types/csv-stringify": "^3.1.0",
