feat: Add auto limit config and sql to query

--- a/package.json
+++ b/package.json
@@ -105,7 +105,18 @@
                         "dark"
                     ],
                     "description": "Controls the theme of the query runner."
+                },
+                "dbt.bigquery.limitCount": {
+                    "type": "number",
+                    "default": 1000,
+                    "description": "Limit results to number if limit clause enabled"
+                },
+                "dbt.bigquery.limitEnabled": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Automatically add a limit clause"
                 }
+
             }
         }],
         "viewsContainers": {
